--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
   <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   <script src="/static/javascript/bootstrap.min.js"></script>
   <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet">
+  <script src="/static/javascript/jquery-te-1.4.0.min.js"></script>
+  <link href="/static/stylesheets/jquery-te-1.4.0.css" rel="stylesheet">
   
   <script>
   $(function() {
