--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,15 @@
 <script src="dist/html5shiv.js"></script>
 <![endif]-->
    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   <script src="/static/javascript/bootstrap.min.js"></script>
   <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet">
   <script src="/static/javascript/jquery-te-1.4.0.min.js"></script>
   <link href="/static/stylesheets/jquery-te-1.4.0.css" rel="stylesheet">
+  <!--link href="/static/stylesheets/custom.css" rel="stylesheet"-->
+  <!--link href="/static/stylesheets/theme.bootstrap.css" rel="stylesheet"-->
   
   <script>
   $(function() {
