some config changes, new page for creating new tasks, attachment details on task page

--- a/templates/front.html
+++ b/templates/front.html
@@ -9,8 +9,8 @@
       	    Dont forget anything ever again<br>
       	    </h4>
       	    <h5>
-      	    Reminder Service is your virtual assistant that will help you remember the important things. Get email reminders, sms reminders, or even voice reminders by creating reminder tasks in less than 10 seconds.
-      	    <a href="/login">Try It - no credit card details required</a>
+      	    Remindica is your virtual assistant that will help you remember the important things. Get email reminders, sms reminders, or even voice reminders by creating reminder tasks in less than 10 seconds.
+      	    <a href="/login">Try It Now</a>
 
       	</h5>
       		<h4>
@@ -22,7 +22,7 @@
       		<h4>I am already using my phone to remind myself</h4>
       		<h5>
       			Its a good step towards remembering stuff but not quite comprehensive. Your phone is the only device from which you can access your reminders. Besides you cant get voice reminders or even email reminders using your phone.
-      			If you are convinced, <a href="/login">give it a try </a> - no credit card details required.
+      			If you are convinced, <a href="/login">give it a try </a>.
       		</h5>
 
 
