--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Re-Mind</a>
+        <a class="navbar-brand" href="/">Remindica</a>
         <div class="nav-collapse collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li id="front" ><a href="/">Home</a></li>
@@ -40,6 +40,12 @@
             
             {% else %}
             <li id="task_list"><a href="/task_list">Tasks</a></li>
+            {% endif %}
+            {% if not current_user.email %}
+            <li id="new_task_logged_in"><a href="/new_task">New</a></li>
+            
+            {% else %}
+            <li id="new_task"><a href="/new_task">New</a></li>
             {% endif %}
             
           </ul>
