--- a/templates/base.html
+++ b/templates/base.html
@@ -24,15 +24,18 @@
 <body onload="$('#{{active}}').addClass('active');">
   <div class="container">
 
-<div class="navbar navbar-default">
-    <div class="container">
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+
         <a class="navbar-brand" href="/">Remindica</a>
-        <div class="nav-collapse collapse navbar-collapse">
+      </div>
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li id="front" ><a href="/">Home</a></li>
             {% if not current_user.email %}
@@ -50,17 +53,19 @@
             
           </ul>
             
-          <ul class="nav navbar-nav pull-right">
+          <ul class="nav navbar-nav navbar-right">
                {% if not current_user.email %}
                 
-                <li id='signup' class="pull-right"><a href="/signup">SignUp</a></li>
-                <li id='login' class="pull-right"><a href="/login">Login</a></li>
+                <li id='signup'><a href="/signup">SignUp</a></li>
+                <li id='login'><a href="/login">Login</a></li>
                 
                 {% else %}
-                <li class="pull-right"><a href="#"> Hi,
+                <li><a href="/logout">Logout</a></li>
+
+                <li><a href="#"> Hi,
                 {{current_user.name}}</a>
                 </li>
-                <li class="pull-right"><a href="/logout">Logout</a></li>
+                
                 
                 
                 {% endif %}
@@ -69,10 +74,13 @@
         </div><!-- /.nav-collapse -->
       </div>
     
-  </div><!-- /navbar -->
+  </nav><!-- /navbar -->
 </div>
   {% block content %}
   {% endblock %}
+  
 </body>
+
+
 </html>
 
