--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-main">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -35,7 +35,7 @@
 
         <a class="navbar-brand" href="/">Remindica</a>
       </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li id="front" ><a href="/">Home</a></li>
             {% if not current_user.email %}
@@ -81,6 +81,7 @@
   
 </body>
 
-
+<script>
+$("body").on("touchdown.dropdown",".dropdown-menu",function(e) { e.stopPropagation();});
 </html>
 
