--- a/templates/front.html
+++ b/templates/front.html
@@ -111,7 +111,7 @@
                     <i class="fa fa-inr service-icon"></i>
               <div class="desc">
                 <h4>ECONOMICAL</h4>
-                        <p>At just Rs.5000 per year subscription and additional usage charges, we are empowering businesses with state of the art computer and telecommunications technology at very affordable prices. </p>
+                        <p>We pride ourselves in offering cost effective solutions. We are empowering businesses with state of the art computer and telecommunications technology at very affordable prices. </p>
               </div>
             </div>  
           </div>          
