--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="breadcrumbs">
+	<div class="container">
+		<h1 class="pull-left">
+			Reminder Task Dashboard
+		</h1>
+	</div>
+</div>
 	<div class="container">
 
 		<div class="row">
