--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -917,7 +917,7 @@
 .purchase {
 	padding: 25px 0 30px;
 	border-bottom: solid 1px #eee;
-	background: url(../img/breadcrumbs.png) repeat;
+	background: url(../images/breadcrumbs.png) repeat;
 }
 .purchase p {
 	margin-bottom: 0;
@@ -1189,7 +1189,7 @@
 	overflow: hidden;
 	padding: 10px 0 6px;
 	border-bottom: solid 1px #eee;
-	background: url(../img/breadcrumbs.png) repeat;
+	background: url(../images/breadcrumbs.png) repeat;
 }
 .breadcrumbs h1 {
 	color: #666;
