--- a/templates/new_task.html
+++ b/templates/new_task.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="breadcrumbs">
+	<div class="container">
+		<h1 class="pull-left">
+			Create New Reminder Task
+		</h1>
+	</div>
+</div>
 	<div class="container">
 
 		
