color change for logo text

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
           <span class="icon-bar"></span>
         </button>
 
-        <a class="navbar-brand" href="/" style="top:10px;color:#777;font-size:20px;"><b>REMINDICA</b></a>
+        <a class="navbar-brand" href="/" style="top:10px;color:#3498db;font-size:20px;"><b>REMINDICA</b></a>
       </div>
         <div class="collapse navbar-collapse" id="navbar-main">
           <ul class="nav navbar-nav">
