Text changes for better product positioning

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,13 +103,13 @@
                 <div class="col-md-6 md-margin-bottom-40">
                     <!-- About -->
                     <div class="headline"><h2>About</h2></div>  
-                    <p class="margin-bottom-25 md-margin-bottom-40"> We are a technology powered company based in India. We create software on the cutting edge of technology in the fields of telecommunications, machine learning, cloud infrastructure, mobile and analytics</p>    
+                    <p class="margin-bottom-25 md-margin-bottom-40"> We are a technology company based in India. We create software on the cutting edge of technology in the fields of telecommunications, machine learning, cloud infrastructure, mobile and analytics</p>    
                     <!-- End About -->
                   </div>
                   <div class="col-md-6 md-margin-bottom-40">
                     <!-- About -->
                     <div class="headline"><h2>Contact Us</h2></div>  
-                    <p class="margin-bottom-25 md-margin-bottom-40">We can be reached at +91-9830906922</p>    
+                    <p class="margin-bottom-25 md-margin-bottom-40">We can be reached at +91-9830906922 and support@remindica.com</p>    
                     <!-- End About -->
                   </div>
                 </div>
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="col-md-6">                     
                     <p>
-                        2014 &copy; Remindica - ALL Rights Reserved. 
+                        2014 &copy; Remindica - ALL Rights Reserved.
                         
                     </p>
                 </div>
