--- a/templates/front.html
+++ b/templates/front.html
@@ -38,7 +38,7 @@
     <div class="slider-inner">
       <div id="da-slider" class="da-slider" style="background-position: 0% 0%;">
         <div class="da-slide">
-          <h2><i> PERSONAL VIRTUAL </i><br><i>ASSISTANT IN THE CLOUD </i></h2>
+          <h2><i> PERSONAL ASSISTANT</i><br><i>IN THE CLOUD </i></h2>
           <p> <i>Enhance productivity </i><br>
             <i>through the power of </i><br>
             <i>cutting edge technology </i></p>
@@ -49,16 +49,16 @@
           <h2><i> EMAIL</i><br>
           <i> SMS</i><br>
           <i> VOICE CALL</i></h2>
-          <p> <i>Get and send </i><br>
-            <i>reminders across</i><br>
-            <i>different channels</i></p>
+          <p> <i>Set tasks across </i><br>
+            <i>different channels</i><br>
+            <i>for remindica</i></p>
 
 
         </div>
         <div class="da-slide">
           <h2><i> TRANSPARENT</i><br>
-          <i> AFFORDABLE</i><br>
-          <i> PRICING</i></h2>
+          <i> AFFORDABLE</i>
+          </h2>
           <p> <i>Empowering businesses</i><br>
             <i>with cost effective</i><br>
             <i>technology and prices</i></p>
@@ -77,8 +77,8 @@
             <div class="row">
                 <div class="col-md-9 animated fadeInLeft">
                     <span>Remindica is your personal virtual assistant.</span>
-                    <p>Use state of the art technology to minimise waste in your business and increase productivity.
-                      Automate and delegate repetitive but important tasks to this cloud based software. Use time spent on phone and email for more productive tasks.</p>
+                    <p>Use state of the art technology to increase productivity.
+                      Automate and delegate repetitive but important tasks to us. Save time spent on phone and email. Remindica can email, send a message, or call a number and speak for you.</p>
                 </div>            
                 
             </div>
@@ -93,7 +93,7 @@
                     <i class="fa fa-phone service-icon"></i>
               <div class="desc">
                 <h4>EMAIL SMS VOICE</h4>
-                        <p>Set reminders in a variety of different channels for your clients, associates and even employees.</p>
+                        <p>Remindica can email, sms and call a number for you.</p>
               </div>
             </div>  
           </div>
@@ -101,17 +101,17 @@
             <div class="service">
                     <i class="fa fa-cogs service-icon"></i>
               <div class="desc">
-                <h4>TASK FREQUENCY</h4>
-                        <p>Reminders can be set at different frequencies - one-time, daily, weekly, monthly.</p>
+                <h4>CONFIGURABLE</h4>
+                        <p>Set tasks to be performed once, daily, weekly or monthly.</p>
               </div>
             </div>  
           </div>
           <div class="col-md-4">
             <div class="service">
-                    <i class="fa fa-inr service-icon"></i>
+                    <i class="fa fa-dollar service-icon"></i>
               <div class="desc">
                 <h4>ECONOMICAL</h4>
-                        <p>We pride ourselves in offering cost effective solutions. We are empowering businesses with state of the art computer and telecommunications technology at very affordable prices. </p>
+                        <p>Cost-effective automation solution. Empower your business with state of the art technology.</p>
               </div>
             </div>  
           </div>          
