--- a/templates/list.html
+++ b/templates/list.html
@@ -4,7 +4,7 @@
 <div class="breadcrumbs">
 	<div class="container">
 		<h1 class="pull-left">
-			Reminder Task Dashboard
+			Task Dashboard
 		</h1>
 	</div>
 </div>
@@ -16,7 +16,7 @@
 					<thead>
 						<tr>
 							<td>
-								State
+								Status
 							</td>
 							<td>
 								Message
