changed product positioning

--- a/templates/front.html
+++ b/templates/front.html
@@ -1,47 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!--
-<div class="container">
-        <div class="row">
-          <div class="col-md-9">
 
-          	<h4>
-      	    Dont forget anything ever again<br>
-      	    </h4>
-      	    <h5>
-      	    Remindica is your virtual assistant that will help you remember the important things. Get email reminders, sms reminders, or even voice reminders by creating reminder tasks in less than 10 seconds.
-      	    <a href="/login">Try It Now</a>
-
-      	</h5>
-      		<h4>
-      			Why do I need this ?
-      		</h4>
-      		<h5>
-      			If you are in the habit of forgetting stuff, especially the important stuff, then this might be just the thing you need. Also, if you are still using notepads or email to keep track of stuff then you could consider this service which presents a unified framework combining email, sms and voice so that managing and remembering tasks is easier.
-      		</h5>
-      		<h4>I am already using my phone to remind myself</h4>
-      		<h5>
-      			Its a good step towards remembering stuff but not quite comprehensive. Your phone is the only device from which you can access your reminders. Besides you cant get voice reminders or even email reminders using your phone.
-      			If you are convinced, <a href="/login">give it a try </a>.
-      		</h5>
-
-
-
-           
-      </div>
-    
-      </div>
-      
-
-    </div> -->
     <div class="slider-inner">
       <div id="da-slider" class="da-slider" style="background-position: 0% 0%;">
         <div class="da-slide">
           <h2><i> PERSONAL ASSISTANT</i><br><i>IN THE CLOUD </i></h2>
-          <p> <i>Enhance productivity </i><br>
-            <i>through the power of </i><br>
-            <i>cutting edge technology </i></p>
+          <p> <i>What does it do ?</i><br>
+            <i>Sends email, sends SMS</i><br>
+            <i>Calls a number and speaks for you</i></p>
 
 
         </div>
@@ -78,7 +45,7 @@
                 <div class="col-md-9 animated fadeInLeft">
                     <span>Remindica is your personal virtual assistant.</span>
                     <p>Use state of the art technology to increase productivity.
-                      Automate and delegate repetitive but important tasks to us. Save time spent on phone and email. Remindica can email, send a message, or call a number and speak for you.</p>
+                      Automate and delegate repetitive but important tasks to us. Save time spent on phone and email. Remindica can send an email, send an SMS, or call a number and speak for you.</p>
                 </div>            
                 
             </div>
