faq page details

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,7 @@
             {% else %}
             <li id="new_task"><a href="/new_task">New</a></li>
             {% endif %}
+            <li id="faq"><a href="/faq">FAQ</a></li>
              {% if not current_user.email %}
                 
                 <li id='signup'><a href="/signup">SignUp</a></li>
