--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -7,11 +7,11 @@
 <div class="breadcrumbs">
   <div class="container">
     <h1 class="pull-left">
-      User Login
+      Forgot Your Password ?
     </h1>
   </div>
 </div>
-{% if error|length >0 %}
+{% if error|length > 0 %}
 <div class="container">
 <div class="row">
   <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
@@ -21,40 +21,44 @@
       </div>
     </div>
 {% endif %}
+{% if success|length > 0 %}
+<div class="container">
+<div class="row">
+  <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+          <br>
+          <div class="alert alert-success fade in">{{success}}</div>
+        </div>
+      </div>
+    </div>
+{% endif %}
 
 
 <div class="container content">   
       <div class="row">
             <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-                <form class="reg-page" action="/login" method="post" id="form">
+                <form class="reg-page" action="/forgot-password" method="post" id="form">
                     <div class="reg-header">            
-                        <h2>Login to your account</h2>
+                        <h2>Enter registered email below</h2>
                     </div>
 
                     <div class="input-group margin-bottom-20">
                         <span class="input-group-addon"><i class="fa fa-user"></i></span>
                         
-                        <input type="text" id="name" class="form-control" name="username" placeholder="Email Id">
+                        <input type="text" id="email" class="form-control" name="email" placeholder="Email Id">
                     </div>                    
-                    <div class="input-group margin-bottom-20">
-                        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                      
-                        <input type="password" id="login_password" class="form-control" name="password" placeholder="Password" onkeydown="if (event.keyCode==19) { document.getElementById('login_submit').focus();}">
-                    </div>                    
-
+                   
                     <div class="row">
                         <div class="col-md-6">
                                                  
                         </div>
                         <div class="col-md-6">
-                            <button class="btn-u pull-right" type="submit">Login</button>                        
+                            <button class="btn-u pull-right" type="submit">Submit</button>                        
                         </div>
                     </div>
 
                     <hr>
 
-                    <h4>Forget your Password ?</h4>
-                    <p>no worries, <a class="color-green" href="forgot-password">click here</a> to reset your password.</p>
+                    
                 </form>            
             </div>
         </div><!--/row-->
@@ -70,9 +74,9 @@
 $('#form').submit(function(){
 
   
-      var name=$('#name').val();
-  var password=$('#login_password').val();
-  if(name==null || name.trim()=="" || password==null || password.trim()=="")
+      var email=$('#email').val();
+  
+  if(email==null || email.trim()=="")
   {
     alert("Email/Password cannot be empty");
     return false;
