--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="js cssanimations csstransitions">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -5,12 +6,19 @@
 <script src="dist/html5shiv.js"></script>
 <![endif]-->
    <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+  <!--link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /--> 
+
   <!--script src="http://code.jquery.com/jquery-1.11.0.min.js"></script-->
-  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <!--script src="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script-->
   <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-  <script src="/static/javascript/bootstrap.min.js"></script>
-  <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet" />
+  <script src="/static/javascript/bootstrap.min.js"></script> 
+  <script src="/static/javascript/tablesaw.stackonly.js"></script>
+  <link href="/static/stylesheets/bootstrap.min.css" rel="stylesheet" /> 
+  <!--link href="/static/stylesheets/stacktable.css" rel="stylesheet" /-->
+  
+
   <link href="/static/stylesheets/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="/static/line-icons/line-icons.css">  
   <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
@@ -24,6 +32,7 @@
   <script type="text/javascript" src="/static/parallax-slider/js/jquery.cslider.js"></script>
   <script type="text/javascript" src="/static/javascript/app.js"></script>
   <script type="text/javascript" src="/static/javascript/index.js"></script>
+  <link href="/static/stylesheets/tablesaw.stackonly.css" rel="stylesheet" />
 
   <script type="text/javascript">
     jQuery(document).ready(function() {
