--- a/templates/checkmail.html
+++ b/templates/checkmail.html
@@ -1,16 +1,83 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-        <div class="row">
-          <div class="col-md-10 col-sm-10">
 
-      	   <h4> Thanks for signing up. You're almost there.</h4>
-           <h4> Click the link we emailed you to activate your account. </h4>
-      </div>
-    
-      </div>
-      
+<link rel="stylesheet" href="/static/stylesheets/faq.css">
 
+    <div class="breadcrumbs-v2 faq-breadcrumb margin-bottom-20">
+        <div class="breadcrumbs-v2-in">
+            <h1>Thank You !</h1>
+            <ul class="breadcrumb-v2 list-inline">
+                <li>
+            </ul>
+        </div>    
     </div>
+
+<div class="container content">     
+        <div class="row">            
+            <div class="col-md-9">
+            	<div class="headline"><h2>Welcome to Remindica</h2></div>
+                <ul class="list-unstyled who margin-bottom-30">
+            	
+            	<br>
+            	Follow the link we emailed you to activate your account.
+            </div>
+              <div class="col-md-3">
+                <!-- Contacts -->
+                <div class="headline"><h2>Contacts</h2></div>
+                <ul class="list-unstyled who margin-bottom-30">
+                    <li><i class="fa fa-home"></i>India</li>
+                    <li><i class="fa fa-envelope-o"></i>support@remindica.com</li>
+                    <li><i class="fa fa-phone"></i>+91-9830906922</li>
+                    <li><i class="fa fa-globe"></i>https://www.remindica.com</li>
+                </ul>
+
+        </div>
+    </div>
+</div>
+
+
+
+  
+      
+<script>
+$('#form').submit(function(){
+      var username=$('#username').val();
+      var email=$('#email').val()
+      var password=$('#password').val();
+      var confirm_password=$('#confirm_password').val();
+      if(email==null || email.trim()=="" || password==null || password.trim()=="" || username==null || username.trim()=="")
+      {
+        alert("Email, password and name cannot be empty");
+        return false;
+
+      }
+      if(password!=confirm_password)
+      {
+        alert("Passwords do not match");
+        return false;
+      }
+      if(password.length<5)
+      {
+        alert("Password should be atleast 5 characters");
+        return false;
+      }
+
+
+    });
+$('#login').submit(function(){
+      var name=$('#name').val();
+  var password=$('#login_password').val();
+  if(name==null || name.trim()=="" || password==null || password.trim()=="")
+  {
+    alert("Email/Username/Password cannot be empty");
+    return false;
+  }
+    });
+  
+
+
+</script>
 {% endblock %}
+
+
