--- a/templates/list.html
+++ b/templates/list.html
@@ -11,6 +11,7 @@
 
 	<div class="container">
 
+ {% if tasks|length > 0 %}
 		<div class="row">
 			<div class="col-lg-12 col-md-12">
 				<table id="task-table" class="table table-bordered table-striped table-hover tablesaw tablesaw-stack" data-mode="stack">
@@ -30,7 +31,7 @@
 							</th>
 							<th >
 								Delete
-							</th>
+							</th>	
 							<th >
 								Details
 							</th>
@@ -68,6 +69,17 @@
 				</table>
 			</div>
 		</div>
+		{% else %}
+		<div class="row">
+			<div class="col-lg-9 col-md-9">
+				<br>
+				<div class="alert alert-danger fade in">No tasks created yet. Creat the first task below.</div>
+				
+				<br>
+			</div>
+		</div>
+
+		{% endif %}
 		
 		<div class="row">
 			
