--- a/templates/new_task.html
+++ b/templates/new_task.html
@@ -7,11 +7,17 @@
 		
 		
 		<div class="row">
-			
+			<br>
 			<div class="col-lg-9 col-md-9 col-sm-12">
-				<div>
-					{{error}}
-				</div>
+				{% if error|length > 0%}
+				<div class="row">
+  					<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+      				<br>
+          			<div class="alert alert-danger fade in">{{error}}</div>
+        			</div>
+      			</div>
+      			{% endif %}
+   
 				<form class="form-horizontal well" method="post" id="form" enctype="multipart/form-data" action="/task_list">
 			        <fieldset>
 			          <legend>Add New Task</legend>
