--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
 {% if signup_error|length >0 %}
 <div class="container">
 <div class="row">
-            <div class="col-lg-5 col-md-5">
+            <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
             	<br>
               <div class="alert alert-danger fade in">{{signup_error}}</div>
               </div>
