--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,17 @@
   <!--link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /--> 
 
   <!--script src="http://code.jquery.com/jquery-1.11.0.min.js"></script-->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55965884-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <!--script src="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script-->
