email template for forgot password, changes to the html for task list page

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                 {% else %}
                 <li><a href="/logout">Logout</a></li>
 
-                <li><a href="/"> Hi,
+                <li><a href="#"> Hi,
                 {{current_user.name}}</a>
                 </li>
                 
