--- a/templates/list.html
+++ b/templates/list.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="breadcrumbs">
-	<div class="container">
-		<h1 class="pull-left">
-			Task Dashboard
-		</h1>
-	</div>
-</div>
+<link rel="stylesheet" href="/static/stylesheets/faq.css">
+
+ <div class="breadcrumbs-v2 faq-breadcrumb margin-bottom-20">
+        <div class="breadcrumbs-v2-in">
+            <h1>Task Dashboard</h1>
+            <ul class="breadcrumb-v2 list-inline">
+                <li>
+            </ul>
+        </div>    
+    </div>
 
 	<div class="container">
 
