--- a/templates/login.html
+++ b/templates/login.html
@@ -29,6 +29,7 @@
                 <form class="reg-page" action="/login" method="post" id="form">
                     <div class="reg-header">            
                         <h2>Login to your account</h2>
+                        <p>Don't have an account yet? Click <a href="/signup" class="color-green">Sign Up</a> to create a new account.</p>
                     </div>
 
                     <div class="input-group margin-bottom-20">
