--- a/static/stylesheets/tablesaw.stackonly.css
+++ b/static/stylesheets/tablesaw.stackonly.css
@@ -28,6 +28,17 @@ table.tablesaw {
   padding: .5em .7em;
 }
 
+.tablesaw-stack  {
+  
+}
+
+.table>thead>tr>th{
+  border-top: 1px solid #dddddd;
+}
+.table>thead:first-child>tr:first-child>th{
+ border-top: 1px solid #dddddd;
+ border-bottom: 1px solid #dddddd; 
+}
 .tablesaw thead tr:first-child th {
   padding-top: .9em;
   padding-bottom: .7em;
@@ -67,9 +78,16 @@ table.tablesaw {
     border-right:1px solid #dddddd;
   }
 
+.table-bordered > tbody > tr:first-child >td:first-child {
+  border-top:1px solid #dddddd;
+}
+
   /* Make the label elements a percentage width */
 
 
+  .tablesaw-stack td>text{
+    display:inline-block;
+  }
   .tablesaw-stack td .tablesaw-cell-label,
   .tablesaw-stack th .tablesaw-cell-label {
     display: block;
