changed front page to include more product knowhow

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -132,7 +132,7 @@
                         </div>
                         <div id="collapseFive" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <p>The service can be accessed from any modern mobile phone including Android, iPhone, Blackberry, Windows Phone etc. Presently it is available on mobile web only but we are working on native apps.</p>
+                                <p>The service can be accessed from any modern mobile phone including Android, iPhone, Blackberry, Windows Phone. It works on major mobile browsers like Chrome, Safari, Opera and Internet Explorer.</p>
                                 
                             </div>
                         </div>
