--- a/templates/front.html
+++ b/templates/front.html
@@ -47,6 +47,10 @@
                     <p>Use state of the art technology to increase productivity.
                       Automate and delegate repetitive but important tasks to us. Save time spent on phone and email. Remindica can send an email, send an SMS, or call a number and speak for you.</p>
                 </div>            
+                 <div class="col-md-3 btn-buy animated fadeInRight">
+                    <a href="/faq" class="btn-u btn-u-lg"><i class="fa fa-gears"></i>Learn More</a>
+                </div>
+
                 
             </div>
         </div>
@@ -83,6 +87,47 @@
             </div>  
           </div>          
       </div>
+
+      <div class="row margin-bottom-30">
+          <!-- Welcome Block -->
+        <div class="col-md-8 md-margin-bottom-40">
+          <div class="headline"><h2>What does it do ?</h2></div>
+                <div class="row">
+                    
+                    <div class="col-sm-8">
+                        <p>Remindica is an incredibly simple to use cloud based personal assistance software. </p>
+                        <ul class="list-unstyled margin-bottom-20">
+                            <li><i class="fa fa-check color-green"></i> It can send an email for you</li>
+                            <li><i class="fa fa-check color-green"></i> It can send an SMS for you</li>
+                            <li><i class="fa fa-check color-green"></i> It can call a number and speak for you</li>
+                            <li><i class="fa fa-check color-green"></i> It can do all of the above at your scheduled time</li>
+                            <li><i class="fa fa-check color-green"></i> Set one-time, daily,weekly and monthly tasks</li>
+                            <li><i class="fa fa-check color-green"></i> Unlike Google Calendar, this can remind others on your behalf.</li>
+                        </ul>                    
+                    </div>
+                </div>
+
+                <blockquote class="hero-unify">
+                    <p>I dont have to remember to pay bills anymore since Remindica sends me timely reminders.</p>
+                    <small>Akshay Gupta - Retail Store Owner</small>
+                </blockquote>
+            </div><!--/col-md-8-->        
+         <div class="col-md-4 md-margin-bottom-40">
+          <div class="headline"><h2>Praise</h2></div>
+                
+
+                <blockquote class="hero-unify">
+                    <p>I use it to remind clients to pay bills on time. Its very simple and effective</p>
+                    <small>Pulak Murarka - Chemical Manufacturer</small>
+                </blockquote>
+                <blockquote class="hero-unify">
+                    <p>I send my clients timely appointment reminders - its just magical</p>
+                    <small>Mudit Jhunjhunwala - Chartered Accountant</small>
+                </blockquote>
+            </div><!--/col-md-8-->   
+          </div>
+
+
 </div>
 
 
