better admin page with user information, changes to text on front page

--- a/templates/front.html
+++ b/templates/front.html
@@ -103,6 +103,7 @@
                             <li><i class="fa fa-check color-green"></i> It can do all of the above at your scheduled time</li>
                             <li><i class="fa fa-check color-green"></i> Set one-time, daily,weekly and monthly tasks</li>
                             <li><i class="fa fa-check color-green"></i> Unlike Google Calendar, this can remind others on your behalf.</li>
+                            <li><i class="fa fa-check color-green"></i> No learning or setup required</li>
                         </ul>                    
                     </div>
                 </div>
